// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should setup 1 expense summary 1`] = `
<div>
  <h4>
    Viewing 
    1
     expense
     totalling 
    $1.95
  </h4>
</div>
`;

exports[`should setup 1 expense summary 2`] = `
<div>
  <h4>
    Viewing 
    3
     expense
    s
     totalling 
    $19,951.95
  </h4>
</div>
`;
